# lang-chain

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  memory.py  memory_fastapi_endpoint.py
app/agents/: __init__.py
app/chains/: agent_chain.py  rag_chain.py
app/models/: __init__.py
app/prompts/: prompt_templates.py
app/retrievers/: document_retriever.py
app/utils/: __init__.py
docs/: LangChain-PreReq.md  env.md  file-structore.md  files-explain.md  pylint-langchain.md  requirements-PythonEssentials-async.md  requirements-PythonEssentials-llmOutputParsing.md  requirements-PythonEssentials.md  topics - langChain by 千问.md  topics- llm-by 豆包.md
docs/千问-LangChain Fundamentals/: @what-is-langchain.md  memory.md  model-prompt-chain.md  prompt-engineering-langsmith.md  prompt-engineering.md
docs/千问-LangChain Fundamentals/langchain-memory/: langchain-memory.md
langchain_app/: __init__.py  main.py  memory.py  memory_fastapi_endpoint.py
langchain_app/agents/: __init__.py
langchain_app/chains/: __init__.py  simple_chain.py
langchain_app/prompts/: __init__.py  system_prompts.py
langchain_app/prompts/templates/: basic_template.py
langchain_app/tools/: __init__.py
tests/: test_app.py  test_chains.py  test_utils.py
