[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-langchain-app"
version = "0.1.0"
description = "A LangChain application for building LLM-powered tools and services"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",   # provides ChatMessageHistory
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",    # keep [standard] for reload, etc.
    "requests>=2.28.0",
    "tiktoken>=0.5.0",
    "httpx>=0.24.0",                # used by LangChain & OpenAI
    "tqdm>=4.62.0",                 # progress bars
    "sentence-transformers>=2.2.0", # for local embeddings (e.g., with Chroma)
    "pydantic>=2.0.0",
]

[tool.pylint.main]
# Add project root to Pylint's module search path (fixes "import could not be resolved")
init-hook = "import sys; sys.path.append('.')"
paths = ["app", "tests"]
ignore-paths = ["venv", ".git", "docs"]

[tool.pylint.messages_control]
# 允许的错误/警告级别（可根据需求调整）
# Disable unnecessary warnings (optional but helpful)
disable = [
    "C0114", # Missing module docstring
    "C0115", # missing-class-docstring
    "E0015", # Unrecognized option found: paths
    ## "C0411", # wrong-import-order
    "C0116", # Missing function docstring
    "W0511", # TODO comments
    "R0903", # 忽略"类只有少量方法"（适合工具类/配置类）
]

[tool.pylint.format]
max-line-length = 120
indent-string = "    " # 缩进用4个空格

[tool.pylint.imports]
# Allow relative imports (e.g., from .config import settings)
# allow-relative-imports = true
allow-any-import-level = true # 允许任意层级的导入

[project.optional-dependencies]
# For development
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython",
]
# Optional: Add local LLM support (100% offline)
local = [
    "langchain-ollama", # for Ollama integration
    "huggingface-hub",  # for sentence-transformers & models

]
# Install all: pip install -e .[dev,local]
all = ["my-langchain-app[dev,local]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
